tests/typing/fail/clock-07.stderr
error: proc macro panicked
  --> tests/typing/fail/clock-07.rs:3:1
   |
3  | / sync! {
4  | |     #![pass(1)]
5  | |
6  | |     node oui(c : bool) = ()
...  |
11 | |         };
12 | | }
   | |_^
   |
   = help: message: not yet implemented: clock type error
